# RDATKit

./: .gitignore  LICENSE.md  README.md  README.txt  SRPDIV_DMS_0001.xls  Untitled.ipynb  bootstraptest.py  datahandlers.py  mapping.py  ontology.py  path.py.example  requirements.txt  rna.py  secondary_structure.py  settings.py  settings.py.example  setup.py  view.py
.github/workflows/: release.yml
MATLAB/: cat_rdat_files.m  check_rdat.m  convert_struct_to_annotations.m  extract_reactivities.m  fill_rdat.m  fill_sequences_and_structures.m  get_mutation_info_from_tag.m  get_tag.m  openrdat.m  output_rdat_to_file.m  print_out_rdat.m  read_rdat_file.m  show_rdat.m  xticklabel_rotate_rdat.m
RDATkit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
_deprecated_/eterna/: get_project_rdat.py
likelihood/: build_database.py  build_model.py  make_plots.py  optimize.py
likelihood/databases/: default.db  p4p6.db  sixnoncodings.db  (+1 more)
matlab_scripts/: RDATFile.m  cat_rdat_files.m  check_rdat.m  fill_rdat.m  fill_sequences_and_structures.m  find_annotation_tag.m  get_modifier_list.m  get_tag.m  make_rdat_stair_plots.m  output_rdat_to_file.m  output_workspace_to_rdat_file.m  print_out_rdat.m  read_rdat_file.m  show_rdat.m  xticklabel_rotate_rdat.m
python/: LICENSE  README.md  pyproject.toml
rdat-kit/: LICENSE  README.md  pyproject.toml  util.py
rdat-kit/src/rdat_kit/: __init__.py  cli.py
rdatkit/: __init__.py  datahandlers.py  eval.py  evaluation.py  handler.py  mapping.py  path.py  rna.py  secondary_structure.py  secstr.py  settings.py  util.py  varna.py  view.py
(+44 files in other folders)
