[project]
name = "rdat_kit"
version = "1.6.3"
authors = [
  { name="Das Lab", email="thedaslab@stanford.edu" },
]
description = "RDATKit is a utility library for reading and writing RDAT files that describe RNA structure mapping experiments"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "xlwt",
  "xlrd",
]

[project.urls]
"Homepage" = "https://github.com/ribokit/rdatkit"
"Documentation" = "https://ribokit.github.io/RDATKit/"
"Bug Tracker" = "https://github.com/ribokit/rdatkit/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"